--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   # Data & Persistence
   shared_preferences: ^2.2.2
   json_annotation: ^4.9.0
+  supabase_flutter: ^2.9.0
   
   # Functional Programming
   fpdart: ^1.1.0
